--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,5 +13,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ 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 }}
-          GIST_ID: ${{ https://gist.github.com/sleepyhood/ }}
+          GIST_ID: ${{ https://gist.github.com/sleepyhood/321595905d907f444ad1061e863f4c2e }}
           TIMEZONE: Asia/Seoul
